fix DOME text alignment

--- a/src/app/shared/components/power/power.component.scss
+++ b/src/app/shared/components/power/power.component.scss
@@ -20,7 +20,7 @@ h2.title{
   align-items: center;
 
   .dome{
-    margin-bottom:16px;
+    margin-block: 0 18px;
   }
 
   button{
